src/tests/fixtures/typename/PropertySignatureTypenameIncorrectName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User implements IPerson {
  __typename: "Group";
  /** @gqlField */
  name: string;
}

/** @gqlInterface */
export interface IPerson {
  /** @gqlField */
  name: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertySignatureTypenameIncorrectName.ts:3:15 - error: Expected `__typename` property to be `"User"`. This lets Grats know that the GraphQL executor will be able to derive the type of the object at runtime.

3   __typename: "Group";
                ~~~~~~~
